# popdf

./: .gitignore  README.md  allpackages.txt  requirements.txt  setup.cfg
course/: 给小白的10讲Python + PDF自动化办公.xmind
course/code/: 0-install.py  1-pdf2docx.py  2-pdf2imgs.py  3-txt2pdf.py  4-split4pdf.py  5-encrypt4pdf.py  6-decrypt4pdf.py  7-add_text_watermark.py  8-merge2pdf.py  9-del4pdf.py
course/test/: rename.py
demo/: pdf2imgs_demo.py  test.py
dev/: 1、table2excel.py  a.py  page_count.py  split_pdf.py  water.py  加密解密.py
dev/SeisBlade/修改pdf的作者和日期等文件信息/: pdf_metadata_updater.py
examples/course/code/: 1-pdf2docx.py  4-split4pdf.py  5-encrypt4pdf.py  7-add_text_watermark.py  9-del4pdf.py
examples/course/code/test_files/doc/: 程序员晚枫.docx
examples/course/test/: page_num.py
examples/demo/: pdf2imgs_demo.py  test.py
examples/dev/: img4merge.py  line.py  split_pdf.py  water.py
popdf/: __init__.py
popdf/api/: pdf.py
popdf/core/: Batch_PDFType.py  PDFType.py
popdf/lib/: del4pdf_utils.py  pdf2imgs_utils.py  pdf_exceptions.py  pdfdecrypt_utils.py  split4pdf_utils.py  utils.py
popdf/lib/pdf/: add_watermark_service.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  test_pdf.py
tests/test_code/: test_dev.py  test_pdf.py  test_split4pdf.py
tests/test_files/docx/: in.docx  merge.docx  程序员晚枫.docx
tests/test_files/pdf/: in.docx
tests/test_files/pdf2docx/: test.docx  程序员晚枫.docx
tests/test_files/pdf2docx/docx/: 1.docx  程序员晚枫-1.docx
tests/test_files/txt2pdf/batch/: 程序员晚枫.txt
