[metadata]
name = popdf
version = 1.0.0
description = pip install popdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/popdf/issues
    Documentation = https://github.com/CoderWanFeng/popdf/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/popdf

[options]
packages = find:
install_requires =
    PyPDF2
    pdf2docx
    PyMuPDF
    poprogress
    pofile
    loguru
    pillow

python_requires = >=3.7
include_package_data = True
zip_safe = False

